force-app/main/default/objects/lw_docgen__Impact_Analysis_Run__c/lw_docgen__Impact_Analysis_Run__c.object-meta.xml
<CustomObject>
    <description>Records an impact analysis run that tests all configured reports to verify they still execute correctly.</description>
    <label>Impact Analysis Run</label>
    <nameField>
        <label>Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impact Analysis Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>