force-app/main/default/objects/lw_docgen__Impact_Analysis_Run__c/fields/lw_docgen__Notes__c.field-meta.xml
<CustomField>
    <fullName>lw_docgen__Notes__c</fullName>
    <description>Optional notes about this impact analysis run.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>