force-app/main/default/objects/lw_docgen__Impact_Analysis_Run__c/fields/lw_docgen__Run_Date__c.field-meta.xml
<CustomField>
    <fullName>lw_docgen__Run_Date__c</fullName>
    <description>The date and time when this impact analysis run was initiated.</description>
    <label>Run Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>