force-app/main/default/objects/lw_docgen__Impact_Analysis_Run__c/fields/lw_docgen__Status__c.field-meta.xml
<CustomField>
    <fullName>lw_docgen__Status__c</fullName>
    <description>The overall status of the impact analysis run. Preparing = disabling unused field permissions, Pending = waiting to start, In Progress = running reports, Completed/Completed with Errors = finished.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preparing</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed with Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>