force-app/main/default/objects/lw_docgen__Impact_Analysis_Run__c/listViews/lw_docgen__All.listView-meta.xml
<ListView>
    <fullName>lw_docgen__All</fullName>
    <columns>NAME</columns>
    <columns>lw_docgen__Run_Date__c</columns>
    <columns>lw_docgen__Status__c</columns>
    <columns>lw_docgen__Total_Reports__c</columns>
    <columns>lw_docgen__Successful_Reports__c</columns>
    <columns>lw_docgen__Failed_Reports__c</columns>
    <columns>lw_docgen__Initiated_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>